--- a/BetterSCP.SCP049/BetterSCP.SCP049.csproj
+++ b/BetterSCP.SCP049/BetterSCP.SCP049.csproj
@@ -61,6 +61,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SCP049Handler.cs" />
     <Compile Include="SCP049Shield.cs" />
+    <Compile Include="Translation.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include=".editorconfig" />
